feat(*) add swagger docs
